<resources>
    <string name="app_name">Loud Scoreboard</string>
    <string name="team1DefaultName">Team 1</string>
    <string name="team2DefaultName">Team 2</string>
    <string name="reset_the_score">Reset the score</string>
    <string name="announce_the_score">Announce the score</string>
    <string name="swap_the_scores_of_the_teams">Swap the scores of the teams</string>
    <string name="blow_a_whistle">Blow a whistle</string>
    <string name="settings">Settings</string>
    <string name="enter_name_for_team_1">Enter name for Team 1</string>
    <string name="enter_name_for_team_2">Enter name for Team 2</string>
    <string name="color_for_team_1">Color for Team 1</string>
    <string name="color_for_team_2">Color for Team 2</string>
    <string name="choose_the_sound">Choose the sound</string>
    <string name="mute">Mute</string>
    <string name="pick_a_color_for">Pick a color for</string>
    <string name="tts_default_phrase">%1$d to %2$s. For, %3$d to %4$s</string>
    <string name="color_light_blue">Light Blue</string>
    <string name="color_purple">Purple</string>
    <string name="color_light_green">Light Green</string>
    <string name="color_light_orange">Light Orange</string>
    <string name="color_light_red">Light Red</string>
    <string name="highlight">Enable high contrast mode</string>
    <string name="tts_pitch">Pitch</string>
    <string name="tts_speed_rate">Speed rate</string>
    <string-array name="custom_phrases">
        <item>team1CurrentScore to team1Name. For, team2CurrentScore to team2Name</item>
        <item>team2CurrentScore to team2Name. For, team1CurrentScore to team1Name</item>
        <item>teamAheadScore to teamAhead. For, teamBehindScore to teamBehind</item>
        <item>teamBehindScore to teamBehind. For, teamAheadScore to teamAheadScore</item>
        <item>teamThatJustScoredScore to teamThatJustScore. For, teamThatWasScoredScore to teamThatWasScored</item>
        <item>teamThatWasScoredScore to teamThatWasScored. For, teamThatJustScoredScore to teamThatJustScore</item>
        <item>teamThatJustScoredScore to teamThatWasScoredScore for teamThatJustScore</item>
        <item>teamAheadScore to teamBehindScore for teamAhead</item>
        <item>Custom phrase</item>
    </string-array>
    <string name="custom_tts_phrase_spinner">Announce phrase</string>
</resources>