<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/team1DefaultName"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/team1Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:autofillHints="Name for the Team 1"
            android:hint="@string/enter_name_for_team_1"
            android:inputType="text"
            android:maxLines="1" />

        <Button
            android:id="@+id/team1Color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="@android:color/holo_blue_dark"
            android:text="@string/color_for_team_1"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/team1DefaultName"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/team2Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:autofillHints="Name for Team 2"
            android:hint="@string/enter_name_for_team_2"
            android:inputType="text"
            android:maxLines="1" />

        <Button
            android:id="@+id/team2Color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="@android:color/holo_purple"
            android:text="@string/color_for_team_2"
            android:textColor="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/choose_the_sound"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/sound"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginTop="8dp"
                android:background="@android:color/darker_gray"
                android:popupBackground="@android:color/darker_gray" />
        </LinearLayout>

        <!--<RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <RelativeLayout
                android:id="@+id/minValueLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/minValueLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="Minimum Value"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/minValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/minValueLabel"
                    android:layout_marginTop="8dp"
                    android:hint="Enter minimum value"
                    android:inputType="number" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/maxValueLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/minValueLayout">

                <TextView
                    android:id="@+id/maxValueLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="Maximum Value"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/maxValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/maxValueLabel"
                    android:layout_marginTop="8dp"
                    android:hint="Enter maximum value"
                    android:inputType="number" />
            </RelativeLayout>

        </RelativeLayout>-->

        <CheckBox
            android:id="@+id/mute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/mute" />
    </LinearLayout>
</ScrollView>